# Master-Thesis

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  REPRODUCING.md  pyproject.toml  requirements-lock.txt
configs/datasets/: d1.yaml  d2.yaml  d3.yaml  d4.yaml  d5.yaml  illwerke_raw_stub.yaml
scripts/: README.md  aggregate_deep_impulse.py  aggregate_multiseed.py  aggregate_physical_detector.py  finalize_results.py  fit_physical_detector.py  fit_raw_impulse_detector.py  run_all_remaining.py  run_multiseed_complete.py  search_deep_impulse_flow.py  search_v3.py  train_deep_impulse_flow.py
scripts/baselines/: assemble_comparison.py  head_domain_shift_fpr.py  localization_baselines_ci.py  rq1_mode_refs.py  rq1_strict_nmi.py  run_v0_anomaly.py  v0_domain_shift_multiseed.py
scripts/campaigns/: ablation_full_pipeline.py  analyze_ablation.py  run_ablation_campaign.py  run_deep_v3v4_campaign.py  run_thesis_campaign.py  run_v1_v2_only.py
scripts/diagnostics/: probe_encoder_bottleneck.py  probe_impulse_detector.py  probe_physical_context_norm.py  probe_raw_feature_separability.py  probe_v2.py  probe_v3_score_scale.py  probe_v3_separation.py  reeval_k3.py  train_v2_cma.py  v2_sweep.py  v3_diagnostic.py  v3_gating_check.py
scripts/figures/: __init__.py  fig_architecture.py  fig_charts.py  fig_classical.py  fig_geometry.py  fig_model.py  fig_scada.py  fig_schematics.py  fig_signals.py  make_all.py  style.py
scripts/paradigms/: run_v3_three_paradigms.py  run_v4_three_paradigms.py
scripts/scada/: v5_2_channel_mining.py  v5_2b_clean_target.py  v5_2c_within_mode.py
scripts/sweeps/: v3_deep_sweep.py  v4_aug_sweep.py  v4_deep_sweep.py  v4_knock_expansion_probe.py  v4_localization_ablation.py
scripts/utils/: derive_dataset_sampling_rate.py  visualize_sensor_knock_positions.py
src/: __init__.py  exceptions.py
src/config/: __init__.py  architecture.py  constants.py  dataset_registry.py  device.py
src/data/: __init__.py  datasegment.py
src/features/: __init__.py  acoustic_representations.py  audio_spectral.py  feature_cache.py  vibration_temporal.py
src/ingestion/: __init__.py  adapters.py  illwerke_loader.py  loader.py  positions.py  scanner.py  sync_audit_d4.py  sync_verification.py  test_dataset_loader.py  udbf_reader.py
src/modeling/: __init__.py  early_stopping.py
src/modeling/anomaly/: __init__.py  cnf_head.py  deep_impulse_flow.py  event_detection.py  impulse_anchor.py  kde_baseline.py  physical_detector.py  raw_impulse_detector.py  synthetic_eval.py  threshold.py  v3_per_modality.py  v3_trainer.py  v3_trainer_config.py  v3_trainer_data.py  v3_trainer_model.py  v3_trainer_train.py  weak_labels.py
src/modeling/anomaly_baselines/: __init__.py  density_scorers.py  lstm_ae.py  mode_lgbm.py  srp_phat_baseline.py  v0_evaluation.py
src/modeling/context/: __init__.py  cluster_metric.py  modality_probe.py  v1_ssl.py  v1_ssl_config.py  v1_ssl_data.py  v1_ssl_model.py  v1_ssl_train.py  v2_fusion.py  v2_ssl.py  v2_ssl_config.py  v2_ssl_data.py  v2_ssl_model.py  v2_ssl_train.py
src/modeling/eval/: __init__.py  (+5 more)
tests/: conftest.py  test_assemble_comparison.py  test_d4_loader.py  test_eval_statistics.py  test_event_detection.py  test_feature_cache.py  test_features.py  test_modality_probe.py  test_multilateration.py  test_per_cluster_breakdown.py  test_streaming_smoke.py  test_sync_correction.py  test_sync_verification.py  test_synthetic_anomaly_auc.py  test_test_dataset_loader.py  test_v0_anomaly_eval.py  test_v0_lstm_ae.py  test_v0_mode_lgbm.py  test_v0_srp_phat.py  test_v1_smoke.py  test_v2_smoke.py  test_v3_gating.py  test_v3_per_modality_adapters.py  test_v3_smoke.py  test_v4_channel_ablation.py  test_v4_knock_expansion.py  test_v4_smoke.py  test_v5_smoke.py
tests/unit/: test_acoustic_representations.py  test_architecture_config.py  test_d5_healthy_or_knock_label_scheme.py  test_datasegment.py  test_dataset_registry.py  test_full_run_orchestrator_sync.py  test_ingestion_audit_fixes.py  test_ingestion_dual_layout.py  test_multi_scale_dataset.py  test_pooling.py  test_split_leakage.py  test_v3_xt_pool.py  test_vibration_format_auto.py
(+35 files in other folders)
